--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,98 @@
-.gradient{
-    color: pink;
+.gradient {
+  color: pink;
 }
-.cost{
-   
-    color: orangered ;
+.cost {
+  color: orangered;
 }
-body{
-background-color: rgba(218, 112, 186, 0.26);
+body {
+  background-image: linear-gradient(315deg, #ffffff 0%, #d7e1ec 74%);
 }
-.icon{
- color:  red;
-}
-.fab{
-    font-size:xx-large;
-    padding: 5px;
 
+.fancy-link {
+  text-decoration: none !important;
+  position: relative !important;
 }
+.fancy-link::after {
+  content: "" !important;
+  position: absolute;
+  left: 0% !important;
+  bottom: 0% !important;
+  width: 100% !important;
+  height: 2px !important;
+  color: red !important;
+  background: red !important;
+  transform: scaleX(0) !important;
+  transform-origin: left !important;
+  transition: transform 500ms ease-in-out !important;
+}
+.fancy-link:hover::after {
+  transform: scaleX(1) !important;
+}
+.card-title {
+  position: relative !important ;
+  z-index: 1 !important;
+  display: inline-block !important;
+}
+.card-title::after {
+  content: "" !important;
+  position: absolute !important;
+  top: -0.25rem !important;
+  left: -1rem !important;
+  bottom: -0.25rem !important;
+  width: calc(100% + 6rem) !important;
+  background: orangered !important;
+  z-index: -1 !important;
+  transform: scaleX(0) !important;
+  transform-origin: left !important;
+  transition: transform 0.75s ease-in-out !important;
+}
+.card:hover .card-title::after {
+  transform: scaleX(1) !important;
+}
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.wrapper {
+  display: inline-block;
+  height: 60px;
+  width: 60px;
+  float: left;
+  margin: 0 5px;
+  overflow: hidden;
+  border-radius: 50%;
+  border: #fff;
+  cursor: pointer;
+  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s;
+}
+.wrapper:hover {
+  width: 200px;
+  border-radius: 50px;
+}
+.icon {
+  display: inline-block;
+  height: 60px;
+  width: 60px;
+  border-radius: 50px;
+  box-sizing: border-box;
+  line-height: 60px;
+  text-align: center;
+}
+.icon > i {
+  font-size: 30px;
+  line-height: 60px;
+}
+.wrapper span {
+  font-size: 20px;
+  font-weight: 500px;
+  line-height: 60px;
+  margin-left: 10px;
+}
+ .hover-text{
+    color: rgba(255,255,255,1);
+	background:rgba(217,14,14,0.85);
+    opacity:0.6;
+    margin-top: 15px;
+ }
